# University

./: README.md
C++ - Object Oriented Programming/Dog Shelter - QT interface/: Admin_gui.cpp  Admin_gui.h  CMakeLists.txt  Dog.cpp  Dog.h  InputException.cpp  InputException.h  Repo.cpp  Repo.h  Repo_csv.cpp  Repo_csv.h  Repo_html.cpp  Repo_html.h  Service.cpp  Service.h  Ui.cpp  Ui.h  User_gui.cpp  User_gui.h  Validator.cpp  Validator.h  main.cpp
Fundamentals of programming with Python/Book library - CLI with CRUD operations/src/: IterableDataStructure.py  main.py
Fundamentals of programming with Python/Book library - CLI with CRUD operations/src/domain/: entities.py
Fundamentals of programming with Python/Book library - CLI with CRUD operations/src/repository/: repo.py
Fundamentals of programming with Python/Book library - CLI with CRUD operations/src/tests/: testDataStructure.py
Fundamentals of programming with Python/Connect four - PyGame/src/console/: console.py
Fundamentals of programming with Python/Connect four - PyGame/src/service/: board.py
Fundamentals of programming with Python/Connect four - PyGame/src/tests/: tests.py
Fundamentals of programming with Python/Connect four - PyGame/src/validations/: validations.py
Java - Advanced programming methods/Toy interpretor with JavaFX/: Log0.txt  Log1.txt  Log9.txt  pom.xml
Python - Fundamentals of programming/Book library - CLI with CRUD operations/src/domain/: validators.py
Python - Fundamentals of programming/Book library - CLI with CRUD operations/src/service/: service.py  undoredo.py
(+65 files in other folders)
